--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,6 +108,11 @@ tr>td:nth-child(10) {
     height: 400px;
     width: 675px;
 }
+.infolayer {
+    color: rgb(92, 90, 90);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 15px;
+}
 
 /* small screen adjustments*/
 @media(max-width:767px){
